Fix movement to avoid white spaces on smaller screens

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -52,7 +52,7 @@
   }
 
   85% {
-    transform: translate(10%, 3%) rotate(15deg);
+    transform: translate(6%, 3%) rotate(12deg);
   }
 
   100% {
