--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -6,6 +6,14 @@ body {
   color: $text-color;
 }
 
+h1 {
+  font-size: 1.25em;
+
+  @media screen and (min-width: 768px) {
+    font-size: 2em;
+  }
+}
+
 p {
   margin: 0;
 }
